fix z-index

--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,7 @@ body > #root {
   box-shadow: var(--global-shadow);
   background-color: #eee;
   z-index: -1;
+  position: relative;
   transition: 200ms all cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
